# gemseo-scilab

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CREDITS.md  CREDITS.rst  README.md  README.rst  pyproject.toml  scilab_build.py  setup.cfg  setup.py  tox.ini
examples/: py_scilab_example.py  scilab_discipline_example.py
examples/sci/: dummy_package.sci
public/: versions.json
public/3.0.0/: index.html
public/3.0.0/credits/: index.html
public/3.0.0/reference/gemseo_scilab/: index.html
public/3.0.0/reference/gemseo_scilab/py_scilab/: index.html
public/3.0.0/reference/gemseo_scilab/scilab_discipline/: index.html
public/3.0.0/search/: search_index.json
public/3.0.1/: objects.inv  sitemap.xml
public/3.0.1/credits/: index.html
public/3.0.1/licenses/: index.html
public/3.0.1/reference/SUMMARY/: index.html
public/3.0.1/reference/gemseo_scilab/: index.html
public/3.0.1/reference/gemseo_scilab/scilab_discipline/: index.html
public/3.0.1/search/: search_index.json
public/3.0.1/user_guide/: index.html
public/develop/: 404.html  index.html  sitemap.xml
public/develop/changelog/: index.html
public/develop/credits/: index.html
public/develop/licenses/: index.html
public/develop/reference/SUMMARY/: index.html
public/develop/reference/gemseo_scilab/: index.html
public/develop/reference/gemseo_scilab/py_scilab/: index.html
public/develop/reference/gemseo_scilab/scilab_discipline/: index.html
public/develop/search/: search_index.json
public/develop/user_guide/: index.html
requirements/: check.txt  dist.txt  doc.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.7.txt  test-python3.8.txt  test-python3.9.txt  test.in
src/gemseo_scilab/: py_scilab.py  scilab.py  scilab_discipline.py
tests/: conftest.py  test_py_scilab.py  test_scilab_discipline.py
tests/sci/: dummy_package.sci
tests/sci/dummy_func/: dummy_package.sci
tools/: Dockerfile
