[metadata]
name = gemseo-scilab
author = Francois Gallard
author_email = contact@gemseo.org
url = https://www.irt-saintexupery.com
description = GEMSEO plugin to create disciplines from scilab source code.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.6, <3.10
install_requires =
    gemseo >=3.1.0
    scilab2py >=0.6.0

[options.packages.find]
where = src

# tools settings

[tool:pytest]
testpaths = tests
addopts =
    --disable-pytest-warnings
     # show extra info on xfailed, xpassed, and skipped tests
    -rxs

[coverage:run]
branch = True
source = gemseo_scilab

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    plt.show()
    pylab.plt.show()

[flake8]
# See http://www.pydocstyle.org/en/latest/error_codes.html for more details.
# https://github.com/PyCQA/flake8-bugbear#how-to-enable-opinionated-warnings
ignore =
    E501
    # no docstring for standard and private methods
    D105
    E203
    W503
select = B,C,D,E,F,G,N,T,W,B950
# settings for compatibility with black, see
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#flake8
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=bugbear#line-length
max-line-length = 88
docstring-convention = google

# [mypy]
# files = src/pytest_executable, tests
# python_version = 3.7
# warn_unused_configs = True
# # disallow_subclassing_any = True
# disallow_any_generics = True
# disallow_untyped_calls = True
# # disallow_untyped_defs = True
# disallow_incomplete_defs = True
# # check_untyped_defs = True
# disallow_untyped_decorators = True
# no_implicit_optional = True
# warn_redundant_casts = True
# warn_unused_ignores = True
# # warn_return_any = True
# # no_implicit_reexport = True
#
# [mypy-numpy,pytest,_pytest.*,py,setuptools,jsonschema,delta]
# ignore_missing_imports = True
#
# [mypy-pytest_executable._version]
# ignore_errors = True

[isort]
# settings for compatibility with black, see
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#isort
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
